// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentRefinedValues renders markup with state 1`] = `
<ng-component
  testedWidget={[Function NgAisCurrentRefinements]}
>
  
        <ng-ais-instantsearch>
    
          
    <ng-ais-current-refinements>
      
      
      
      <div
        class="ais-CurrentRefinements"
      >
        
        
        
        
  
        
        
        <ul
          class="ais-CurrentRefinements-list"
        >
          
          
          <li
            class="ais-CurrentRefinements-item"
          >
            
            
            <span
              class="ais-CurrentRefinements-label"
            >
              Brand:
            </span>
            
  
            
            
            <span
              class="ais-CurrentRefinements-category"
            >
              
              
              <span
                class="ais-CurrentRefinements-categoryLabel"
              >
                Canon
              </span>
              
              
              <button
                class="ais-CurrentRefinements-delete"
              >
                ✕
              </button>
              
            
            </span>
            <span
              class="ais-CurrentRefinements-category"
            >
              
              
              <span
                class="ais-CurrentRefinements-categoryLabel"
              >
                Sony
              </span>
              
              
              <button
                class="ais-CurrentRefinements-delete"
              >
                ✕
              </button>
              
            
            </span>
            
          
          </li>
          
        
        </ul>
        <ul
          class="ais-CurrentRefinements-list"
        >
          
          
          <li
            class="ais-CurrentRefinements-item"
          >
            
            
            <span
              class="ais-CurrentRefinements-label"
            >
              Hierarchicalcategories.lvl0:
            </span>
            
  
            
            
            <span
              class="ais-CurrentRefinements-category"
            >
              
              
              <span
                class="ais-CurrentRefinements-categoryLabel"
              >
                Cameras & Camcorders
              </span>
              
              
              <button
                class="ais-CurrentRefinements-delete"
              >
                ✕
              </button>
              
            
            </span>
            
          
          </li>
          
        
        </ul>
        <ul
          class="ais-CurrentRefinements-list"
        >
          
          
          <li
            class="ais-CurrentRefinements-item"
          >
            
            
            <span
              class="ais-CurrentRefinements-label"
            >
              Popularity:
            </span>
            
  
            
            
            <span
              class="ais-CurrentRefinements-category"
            >
              
              
              <span
                class="ais-CurrentRefinements-categoryLabel"
              >
                0
              </span>
              
              
              <button
                class="ais-CurrentRefinements-delete"
              >
                ✕
              </button>
              
            
            </span>
            
          
          </li>
          
        
        </ul>
        
  
        
        
        <button
          class="ais-CurrentRefinements-reset"
        >
          
          Clear refinements
        
        </button>
        
      
      </div>
      
    
    </ng-ais-current-refinements>
    
        
  </ng-ais-instantsearch>
      
</ng-component>
`;

exports[`CurrentRefinedValues renders markup without state 1`] = `
<ng-component
  testedWidget={[Function NgAisCurrentRefinements]}
>
  
        <ng-ais-instantsearch>
    
          
    <ng-ais-current-refinements>
      
      
      
      <div
        class="ais-CurrentRefinements"
      >
        
        
        
        
  
        
        
        
  
        
        
        <button
          class="ais-CurrentRefinements-reset"
        >
          
          Clear refinements
        
        </button>
        
      
      </div>
      
    
    </ng-ais-current-refinements>
    
        
  </ng-ais-instantsearch>
      
</ng-component>
`;

exports[`CurrentRefinedValues should apply \`transformItems\` if specified 1`] = `
<ng-component
  testedWidget={[Function NgAisCurrentRefinements]}
>
  
        <ng-ais-instantsearch>
    
          
    <ng-ais-current-refinements>
      
      
      
      <div
        class="ais-CurrentRefinements"
      >
        
        
        
        
  
        
        
        <ul
          class="ais-CurrentRefinements-list"
        >
          
          
          <li
            class="ais-CurrentRefinements-item"
          >
            
            
            <span
              class="ais-CurrentRefinements-label"
            >
              Brand:
            </span>
            
  
            
            
            <span
              class="ais-CurrentRefinements-category"
            >
              
              
              <span
                class="ais-CurrentRefinements-categoryLabel"
              >
                Canon
              </span>
              
              
              <button
                class="ais-CurrentRefinements-delete"
              >
                ✕
              </button>
              
            
            </span>
            <span
              class="ais-CurrentRefinements-category"
            >
              
              
              <span
                class="ais-CurrentRefinements-categoryLabel"
              >
                Sony
              </span>
              
              
              <button
                class="ais-CurrentRefinements-delete"
              >
                ✕
              </button>
              
            
            </span>
            
          
          </li>
          
        
        </ul>
        <ul
          class="ais-CurrentRefinements-list"
        >
          
          
          <li
            class="ais-CurrentRefinements-item"
          >
            
            
            <span
              class="ais-CurrentRefinements-label"
            >
              Hierarchicalcategories.lvl0:
            </span>
            
  
            
            
            <span
              class="ais-CurrentRefinements-category"
            >
              
              
              <span
                class="ais-CurrentRefinements-categoryLabel"
              >
                Cameras & Camcorders
              </span>
              
              
              <button
                class="ais-CurrentRefinements-delete"
              >
                ✕
              </button>
              
            
            </span>
            
          
          </li>
          
        
        </ul>
        <ul
          class="ais-CurrentRefinements-list"
        >
          
          
          <li
            class="ais-CurrentRefinements-item"
          >
            
            
            <span
              class="ais-CurrentRefinements-label"
            >
              Popularity:
            </span>
            
  
            
            
            <span
              class="ais-CurrentRefinements-category"
            >
              
              
              <span
                class="ais-CurrentRefinements-categoryLabel"
              >
                0
              </span>
              
              
              <button
                class="ais-CurrentRefinements-delete"
              >
                ✕
              </button>
              
            
            </span>
            
          
          </li>
          
        
        </ul>
        
  
        
        
        <button
          class="ais-CurrentRefinements-reset"
        >
          
          Clear refinements
        
        </button>
        
      
      </div>
      
    
    </ng-ais-current-refinements>
    
        
  </ng-ais-instantsearch>
      
</ng-component>
`;

exports[`CurrentRefinedValues should be hidden with \`autoHideContainer\` 1`] = `
<ng-component
  testedWidget={[Function NgAisCurrentRefinements]}
>
  
        <ng-ais-instantsearch>
    
          
    <ng-ais-current-refinements>
      
      
      
      
    
    </ng-ais-current-refinements>
    
        
  </ng-ais-instantsearch>
      
</ng-component>
`;
